
  [ Xavier Guimard ]
  * uscan:
    + Change "group" version build: version is the grouping of each component
      version after mk-origtargz changes (i.e. a repack suffix can be added to
      each component separately).  MR: !84
    + Use gpgv in all signature verification.  Closes: #913665; MR: !88
    + Force UTC for the date of the last git commit.  Closes: #910762; MR: !89

  [ Mattia Rizzolo ]
  * wrap-and-sort:
    + Avoid crashing on non-unicode locales.  Closes: #914181

  [ James McCoy ]
  * Devscripts::Packages:
    + Parse "dpkg --status" instead of /var/lib/dpkg/status.  MR: !87
  * Devscripts::PackageDeps:
    + Add fromStatus() to parse "dpkg --status", leaving new() to parse other
      similar files.  MR: !87
  * dpkg-depcheck:
    + Use Devscripts::PackageDeps->fromStatus.  MR: !87

 -- Mattia Rizzolo <mattia@debian.org>  Wed, 05 Dec 2018 17:59:12 +0100

devscripts (2.18.9) unstable; urgency=medium

  * Fix FTBFS due to a missing dependency in the Makefile.

 -- Mattia Rizzolo <mattia@debian.org>  Tue, 13 Nov 2018 13:52:35 +0100

devscripts (2.18.8) unstable; urgency=medium

  [ Reiner Herrmann ]
  * nmudiff:
    + Check for neomutt if mutt is not available.  Closes: #912083

  [ Xavier Guimard ]
  * French translation update.
  * uscan:
    + Fix default compression suffix in git HEAD mode.  Closes: #912403; MR: !81
    + Re-enable -dd and -ddd and fix documentation.  MR: !78
    + Support of grouped upstream sources.  Closes: #899073; MR: !80
  * mk-origtargz:
    + Add --force-repack option.
  * Devscripts::Config:
    + Fix bad error handling and improve tests.
    + Fix handling of array values (space-separated values) in .devscripts.

  [ Jérémy Lal ]
  * uscan:
    + Fix missing parenthesis.  Closes: #913008

  [ Mattia Rizzolo ]
  * doc:
    + Move the instructions to build/install/clean the doc/ directory into a
      Makefile in that directory.
    + Move devscripts.1 and devscripts.conf.5 from scripts/ to doc/.